[package]
name = "traceroute"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
raw-socket  = { path = "../raw-socket" }
pnet = "0.28.0"
rand = "0.8.5"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
libc = "0.2.150"
